He validao cosas surmano y he cambiado encabezados mu cremosamente cremosos

--- a/p2/muertes.html
+++ b/p2/muertes.html
@@ -46,9 +46,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  <span class="menu"><img src="images/menu.png" alt=""> </span>
 
 					    <ul>
-							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">Mejores momentos</a></li>
-							<li><a href="muertes.html">Curiosidades</a></li>
+							<li class="active"><a href="muertes.html">Curiosidades</a></li>
 							<li><a href="blog.html">Springfield</a></li>
                             <li><a href="single.html">Personajes</a></li>
 							<li><a href="contact.html">Contact</a></li>
@@ -79,13 +79,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         		<div class="container">
 		<div class="content2">
 		<div class="about">
-		
 				<h1>MUERTES DE PERSONAJES A LO LARGO DE LA SERIE</h1>
-<br/><p>Durante la serie, varios personajes, algunos secundarios y otros menores, han muerto. Otros han sido asesinados de broma en los especiales de terror.
-</p><br/>
+<p>Durante la serie, varios personajes, algunos secundarios y otros menores, han muerto. Otros han sido asesinados de broma en los especiales de terror.
+</p>
 <ul><li>Antes del Comienzo de <b>Los Simpsons</b> Hubert Simpson</a>, muere en un corto de The Tracey Ullman Show llamado "The Funeral"</li></ul>
 <h2>Flashbacks</h2>
-<li>Clancy Bouvier, en Jazzy and the Pussycats. Marge dice que murió un poco después de haberse casado con Homer.
+<ul><li>Clancy Bouvier, en Jazzy and the Pussycats. Marge dice que murió un poco después de haberse casado con Homer.
 </li><li> Snowball I, muere tras ser atropellado por un camión conducido por Clovis Quimby. La muerte es mencionada por primera vez en Simpsons Roasting On An Open Fire" con Clovis Quimby siendo mencionado como el asesino en "Treehouse of Horror III".
 </li><li> Orville Simpson, visto en el cielo por Bart en "Bart Gets Hit by a Car".
 </li><li> Milton "Ox" Haas, muere a causa de una hernia.
@@ -97,131 +96,132 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </li><li> En "The Secret War of Lisa Simpson", Lisa menciona que Emily Dickson se volvió loca y murió.
 </li><li> La asistente del gran Raymondo, murió tiempo atrás, según Raymondo en "The Great Simpsina".
 </li><li> La esposa de un Viktor De Ukrania, muere cuando la pistola de otro gangster le disparó, posteriormente, se muestra un flashback de su muerte en "The Falcon and The D'oh Man".
-</li>
+</li></ul>
 <h2>Temporada 1</h2>
-<li> Bart Simpsons, muere acosado por Nelson Muntz en "Bart the General" (alucinación de Bart).
-</li>
+<ul><li> Bart Simpsons, muere acosado por Nelson Muntz en "Bart the General" (alucinación de Bart).
+</li></ul>
 <h2>Temporada 2</h2>
-<li> Beatrice "Bea" Simmons, muere debido que le explotó un ventrículo en "Old Money".
-</li>
+<ul><li> Beatrice "Bea" Simmons, muere debido que le explotó un ventrículo en "Old Money".
+</li></ul>
 <h2>Temporada 3</h2>
-<li> Snuffy, hámster mascota de Lisa. Lisa recita un poema sobre su muerte en "Stark Raving Dad".
+<ul><li> Snuffy, hámster mascota de Lisa. Lisa recita un poema sobre su muerte en "Stark Raving Dad".
 </li><li> Spinal Tap, probablemente mueren en la explosión de su autobús en "The Otto Show".
 </li><li> Stinky y Wrinkles, Bart mata a los peces de la escuela con su yo-yo mientras intentaba hacer un truco.
 </li><li> Hámster desconocido, muere en la mesa de operaciones en "Dog of Death".
 </li><li> Probablemente, Firulai murió algún tiempo después de "Dog of Death".
-</li>
+</li></ul>
 <h2>Temporada 4</h2>
-<li> Gladys Bouvier, muere en "Selma's Choice".
+<ul><li> Gladys Bouvier, muere en "Selma's Choice".
 </li><li> Numerosos personajes mueren devorados por King Homer en "Treehouse of Horror III".
 </li><li> Numerosos personajes encontraron la muerte al caer de una escalera mecánica en "Marge vs. the Monorail".
-</li>
+</li></ul>
 <h2>Temporada 5</h2>
-<li> Boris Simpson, dejó a la familia Simpson con su casa cuando murió en "Homer Loves Flanders".
-</li>
+<ul><li> Boris Simpson, dejó a la familia Simpson con su casa cuando murió en "Homer Loves Flanders".
+</li></ul>
 <h2>Temporada 6</h2>
-<li> Bleeding Gums Murphy, muere en el hospital por una enfermedad en "Round Springfield".
+<ul><li> Bleeding Gums Murphy, muere en el hospital por una enfermedad en "Round Springfield".
 </li><li> El Dr. Marvin Monroe;ya que se ve un hospital dedicado a Marvin Monroe y se ve su tumba en el entierro de Murphy, en "Round Springfield" (pero nada de eso es cierto ya que en la decimoquinta temporada aparece como un fan que quiere un autógrafo (aunque luego nunca volvió a aparecer))
 </li><li> Un hombre muere al caer en el mar de lava al tratar de llegar al teléfono público para contestarle a Bart Simpson en "Bart vs. Australia".
 </li><li>Un koala muere al ser electrocutado en "Bart vs. Australia"
 </li><li> Superdude, el hamster de la escuela, muere aplastado por una botella de agua en "Who Shot Mr. Burns?(Parte 1)".
-</li>
+</li></ul>
 <h2>Temporada 7</h2>
-<li> Un número desconocido de personas de Shelbyville, murieron cuando fueron golpeados por el reloj gigante del Sr. Burns en "Who Shot Mr. Burns?(Parte 2)"
+<ul><li> Un número desconocido de personas de Shelbyville, murieron cuando fueron golpeados por el reloj gigante del Sr. Burns en "Who Shot Mr. Burns?(Parte 2)"
 </li><li>Un venado muere comido por un león en "Lisa the Vegetarian"
 </li><li>La Oveja es comido por la aguila en "Lisa the Vegetarian"
 </li><li>Un Gorila Es Comido Por Un Tiburon en "Lisa the Vegetarian"
 </li><li>Tía Hortense, falleció un tiempo antes de "Bart the Funk".
 </li><li>Asa Phelps, muere en "Raging Abe Simpson and His Grumbling Grandson in "The Curse of the Flying Hellfish".
 </li><li>Sr. Estes, un asesor de publicaciones, murió y dejó a Lisa Simpson a cargo del anuario de la escuela en algún momento antes del episodio "Summer of 4 Ft. 2".
-</li>
+</li></ul>
 <h2>Temporada 8</h2>
-<li> James Bont, es asesinado a tiroteos por los guardias de Hank Scorpio en "You Only Move Twice".
+<ul><li> James Bont, es asesinado a tiroteos por los guardias de Hank Scorpio en "You Only Move Twice".
 </li><li> Un Convicto, estaba a punto de ser ejecutado con la silla eléctrica de la prisión estatal de Springfield, hasta que el Huracán Barbara levantó el techo de la cárcel y tiró de el en el aire, posteriormente aterrizó en unas líneas de electricidad y se electrocutó en "Hurricane Neddy".
 </li><li> Frank Ormand, el hombre que le dio a Marge la franquicia de los pretzels, muere en un accidente automovilístico ebablemente por la falta de oxígeno ya que estaba metido en el acuario de los zapatos de Disco Stu. Stu explicó que no podía sacarlo de allí.
 </li><li>Shary Bobbins, fue la niñera mágica de los Simpsons, es mutilada por un avión.
 </li><li>Frank Grimes muere electrocutado en la Planta Nuclear de Springfield
-</li>
+</li></ul>
 <h2>Temporada 9</h2>
-<li>Capitán Tenille, posiblemente muere en "Simpson Tide".
-</li>
+<ul><li>Capitán Tenille, posiblemente muere en "Simpson Tide".
+</li></ul>
 <h2>Temporada 10</h2>
-<li>Pinchy, langosta mascota de Homer Simpson, Homer sin querer la metió en agua hirviendo y se la terminó comiendo.
+<ul><li>Pinchy, langosta mascota de Homer Simpson, Homer sin querer la metió en agua hirviendo y se la terminó comiendo.
 </li><li>Red Barclay, muere durante un concurso de comer carne en "Maximum Homerdrive".
 </li><li>Mamá pájaro, Bart Simpson accidentalmente le dispara con una arma silenciosa de Nelson Muntz en "Bart the Mother". Bart cuido de los huevos que habia en el nido, los cuales resultaron ser lagartijas
 </li><li> Troy McClure y Lionel Hutz aparecen por última vez en esta temporada en el episodio "Bart the Mother", ya que ambos personajes fueron retirados de la serie luego de la muerte de Phil Hartman.
-</li>
+</li></ul>
 <h2>Temporada 11</h2>
-<li>Maude Flanders, esposa de Ned, muere en "Alone Again, Natura-Diddily".
+<ul><li>Maude Flanders, esposa de Ned, muere en "Alone Again, Natura-Diddily".
 </li><li>Cornelius Chapman, el residente de Springfield más viejo, muere en "The Mansion Family".
 </li><li>Algunos gerentes de "Laramie" y un piloto de helicóptero, mueren en el choque de helicóptero en "E-I-E-I-(Annoyed Grunt)".
-</li>
+</li></ul>
 <h2>Temporada 13</h2>
-<li>Profesor Huntington, muere de cancer en "La Taberna de Homero", él hizo su suicidio caminando al lago y luego aparece como fantasma.
-</li>
+<ul><li>Profesor Huntington, muere de cancer en "La Taberna de Homero", él hizo su suicidio caminando al lago y luego aparece como fantasma.
+</li></ul>
 <h2>Temporada 14</h2>
-<li>Probablemente, algunas tortugas "usadas", pudieron morir después de "The Great Louse Detective".
+<ul><li>Probablemente, algunas tortugas "usadas", pudieron morir después de "The Great Louse Detective".
 </li><li>La muerte de Frank Grimes se repite en "The Great Louse Detective".
 </li><li>Horace Wilcox, muere de un ataque cardiaco cuando dijo "mi lengua tiene gusto a cobre" en "Mr. Spritz Goes to Washington".
-</li>
+</li></ul>
 <h2>Temporada 15</h2>
-<li>Abogado muere atropellado por Homero en "My Mother the CarJacker".
+<ul><li>Abogado muere atropellado por Homero en "My Mother the CarJacker".
 </li><li>Hombre de buceo y peces mueren electrocutados en "The Fat and the Furriest".
 </li><li>Snowball II muere atropellado por el Mercedes de Hibbert en "I, D'oh-bot".
 </li><li>Snowball III muere ahogandose en el agua por atrapar a un pececito en "I, D'oh-bot".
 </li><li>Coltrane cae por la ventana en "I, D'oh-bot".
 </li><li>La muñeca de ojos de botón, asesina al jardinero (Lenny), en la película de Terror "The Redeadening" en "The Ziff Who Came to Dinner".
-</li>
+</li></ul>
 <h2>Temporada 17</h2>
-<li>David es partido por la mitad en "Treehouse of Horror XVI"
+<ul><li>David es partido por la mitad en "Treehouse of Horror XVI"
 </li><li>Un pequeño extraterrestre, muere en el intro de "Treehouse of Horror XVI" por culpa de Kang y Kodos.
-</li>
+</li></ul>
 <h2>Temporada 18</h2>
-<li>Amber Simpson, muere un poco antes en "Jazzy and the Pussycats".
+<ul><li>Amber Simpson, muere un poco antes en "Jazzy and the Pussycats".
 </li><li>El Señor de los Helados muere un ataque por 95 centavos.
 </li><li>Un niño muere por comer helado.
 </li><li>Anna Maria D'Amico, en "The Mook, the Chef, the Wife and Her Homer".
 </li><li>4 de Los Calabresi (archienemigos de gordo tony) mueren en una explosion de auto en "The Mook, the Chef the Wife and Her Homer".
 </li><li>Dante Calabresi Sr y Jr. y Big Alberto mueren de comida envenenada en el mismo episodio.
-</li>
+</li></ul>
 <h2>Película</h2>
-<li>El Dr. Nick Riviera, muere cuando le cae un trozo de vidrio de la cúpula (pero se le muestra vivo en otros episodios lo que quiere decir que era un chiste como el caso de Marvin Monroe.
+<ul><li>El Dr. Nick Riviera, muere cuando le cae un trozo de vidrio de la cúpula (pero se le muestra vivo en otros episodios lo que quiere decir que era un chiste como el caso de Marvin Monroe.
 </li><li>La banda Green Day muere cuando se hunde el barco donde la banda está teniendo su presentación en Springfield.
 </li><li>Todos los peces y 1 anguila mueren electrocutados por el invento de Homer.
-</li>
+</li></ul>
 <h2>Temporada 19</h2>
-<li>Sideshow Bob tiene una falsa muerte en "Funeral for a Fiend" (ya que todo era un plan secreto para liquidar y eliminar a Bart del mapa)
+<ul><li>Sideshow Bob tiene una falsa muerte en "Funeral for a Fiend" (ya que todo era un plan secreto para liquidar y eliminar a Bart del mapa)
 </li><li>Mona Simpson, muere de causas naturales por Homero que no se disculpara en "Mona Leaves-a", pero murió por culpa de 5 policias.
-</li>
+</li></ul>
 <h2>Temporada 20</h2>
-<li>Grand Pumpkin muere al ser derrotado por Tom Turkey en "Treehouse of Horror XIX".
+<ul><li>Grand Pumpkin muere al ser derrotado por Tom Turkey en "Treehouse of Horror XIX".
 </li><li>Un niño, es comido por Tom Turkey en "Treehouse of Horror XIX" *Homer asesina diversas celebridades en "Treehouse of Horror XIX".
-</li>
+</li></ul>
 <h2>Temporada 22</h2>
-<li>Fat Tony le da un paro cardíaco y muere de un infarto en "Donnie Fatso".
+<ul><li>Fat Tony le da un paro cardíaco y muere de un infarto en "Donnie Fatso".
 </li><li>Raymond Bird muere al entrar en el estomago de Santa's Little Helper en "How Munched is that Birdie in the Windown?".
-</li>
+</li></ul>
 <h2>Temporada 23</h2>
-<li>Viktor, falleció cuando Wayne Slater le tiro una estalactita (trozo) de hielo en el corazón en "The Falcon And The D'oh Man".
+<ul><li>Viktor, falleció cuando Wayne Slater le tiro una estalactita (trozo) de hielo en el corazón en "The Falcon And The D'oh Man".
 </li><li> Los gangsters de Viktor, murieron cuando peleaban con Wayne Slater en "The Falcon And The D'oh Man".
 </li><li>La Sra. Glick muere asesinada por una foca bebé robot en el episodio "Replaceable You".
-</li>
+</li></ul>
 <h2>Temporada 24</h2>
-<li>Steve Mobbs, muere en el episodio "A Tree Grows in Springfield".
+<ul><li>Steve Mobbs, muere en el episodio "A Tree Grows in Springfield".
 </li><li>Los equipos del gordon muere atacado.
 </li><li>El Gordo muere disparado.
-</li>
+</li></ul>
 <h2>Temporada 25</h2>
-<li>Edna Krabappel, murió desconocidamente en "Four Regrettings and a Funeral" (sin embargo, ella fue atropellada por Homer, ya que Ned Flanders se lo dijo a Bart en "Holidays of Future Passed". La razón de su muerte, fue el fallecimiento de Marcia Wallace, su dobladora original.
+<ul><li>Edna Krabappel, murió desconocidamente en "Four Regrettings and a Funeral" (sin embargo, ella fue atropellada por Homer, ya que Ned Flanders se lo dijo a Bart en "Holidays of Future Passed". La razón de su muerte, fue el fallecimiento de Marcia Wallace, su dobladora original.
 </li><li>Chip Davis, muere en el episodio "Four Regrettings and a Funeral".
 </li><li>Lyla Markenston, muere en "Four Regrettings and a Funeral".
-</li>
+</li></ul>
 <h2>Temporada 26</h2>
-<li>Hyman Krustofsky, rabino y padre de Krusty, muere en por un paro al corazón en "Clown in the Dumps".
+<ul><li>Hyman Krustofsky, rabino y padre de Krusty, muere en por un paro al corazón en "Clown in the Dumps".
 </li><li>Manjula Nahasapeemapetilon, se supone que muere durante los créditos de "Blazed and Confused", mientras muestran una foto de Jan Hooks, su dobladora original, que murió en el año 2014.
 </li><li> Albert, murió de un paro al corazón en "Walking Big and Tall", tras haber bajado de su silla.
-</li>
+</li></ul>
 <h2>Temporada 27</h2>
+<ul>
 <li>Nibbles, el hamster de la escuela, muere por que lisa lo descuidó por demasiado tiempo por cuidar a otros animales como ayudante de un veterinario en "Lisa the Veterinarian"
 </li></ul><br/>
 <h5>TOP MUERTES DE LOS SIMPSONS: VIDEO</H5>
