--- a/p2/single.html
+++ b/p2/single.html
@@ -40,10 +40,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		      <div class="top-nav">
 			  <span class="menu"><img src="images/menu.png" alt=""> </span>
 					    <ul>
-							<li ><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="404.html">Albums</a></li>
-							<li class="active"><a href="blog.html">Blog</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">Mejores momentos</a></li>
+							<li><a href="muertes.html">Curiosidades</a></li>
+							<li><a href="blog.html">Springfield</a></li>
+                            <li class="active"><a href="single.html">Personajes</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<div class="clearfix"></div>
 						</ul>
