Añadi las redes sociales linkadas

--- a/p2/about.html
+++ b/p2/about.html
@@ -63,10 +63,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 		        <div class="social-icons">						
 		                <ul class="social">
-		                    <li><a  href="#" ><i> </i> </a></li>
-		                    <li><a  href="#" ><i  class="rss"></i></a></li>
-		                    <li><a  href="#" ><i class="twitter"></i></a></li>
-		                    <li><a href="#"><i class="dribble"></i></a></li>
+		                    <li><a  href="https://es-es.facebook.com/TheSimpsons" ><i> </i> </a></li>
+		                    <li><a  href="http://thesimpsonselblog.blogspot.com.es/" ><i  class="rss"></i></a></li>
+		                    <li><a  href="https://twitter.com/TodoLosSimpson" ><i class="twitter"></i></a></li>
+		                    <li><a href="https://dribbble.com/tags/simpsons"><i class="dribble"></i></a></li>
 		                    <div class="clearfix"></div>
 		                </ul>
 		 		    </div>
