Cambio en about.html, añadi un video

--- a/p2/about.html
+++ b/p2/about.html
@@ -95,6 +95,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							<div class="clearfix"> </div>
 							<p>La serie tiene muchos momentos graciosos y momentos que os resultarán muy familiares, como por ejemplo cuando homer simpson va a un campamento de Rock y salen los Rolling Stones.</p>
+							
+						<div class="content">
+						<iframe width="700" height="415" src="https://www.youtube.com/embed/3scAdWyGOAk" frameborder="0" allowfullscreen></iframe>
+						</div>
 						</div>
 					</div>
 					<div class="col-md-4 in-profile">
