--- a/p2/contact.html
+++ b/p2/contact.html
@@ -28,7 +28,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				     <div class="slider">
 				      <div class="slider-wrapper theme-default">
 				            <div id="slider" class="nivoSlider">
-				                <img src="images/The_Simpsons_Logo.png" data-thumb="images/The_Simpsons_logo.png" alt="" />
+				                <img src="images/simpsons_600.jpg" data-thumb="images/The_Simpsons_logo.png" alt="" />
 				                <img src="images/simpsons20thchokelogo_clouds2.jpg" data-thumb="images/1.jpg" alt="" />
 				                <img src="images/the-simpsons-movie-4f7b330acdfd8.png" data-thumb="images/3.jpg" alt="" />
 				                <img src="images/3_0eaba74de9.jpg" data-thumb="images/1.jpg" alt="" />
