--- a/p2/single.html
+++ b/p2/single.html
@@ -80,8 +80,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="blog-top-in">
 		
 			<div class="col-md-8 sed-in">
-				<h2 style="color:white";><ins>Los Simpsons</ins> - Personajes Principales y Secundarios</h2>										  						
-				<p style="font-size:18px;">Los personajes en las distintas temporadas de Los Simpsons son variados y característicos, algunos solo aparecen en un solo capítulo, y otros son tan habituales y que todos conocemos como Flanders, Milhouse o Skinner</p>
+				<h2 style="color:white;background-color:#b18b00";><ins>Los Simpsons</ins> - Personajes Principales y Secundarios</h2>										  						
+				<p style="font-size:21px;">Los personajes en las distintas temporadas de Los Simpsons son variados y característicos, algunos solo aparecen en un solo capítulo, y otros son tan habituales y que todos conocemos como Flanders, Milhouse o Skinner</p>
 			</div>
 			<div class="col-md-8 sed-in"><br/>
 				<h3 style="color:white";><ins>Personajes Principales</ins></h3><br/> 
@@ -92,6 +92,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		            <li><p class="at-in">- <ins>Bart Simpson</ins>: Es el hijo mayor, tenía 9 años hasta el episodio Radio Bart, 10 hasta la segunda mitad de la temporada 24, y actualmente tiene 11 años de edad. Es travieso y a veces hiperactivo; muchas veces se mete en líos principalmente por tener ideas vandálicas o que se salen de control. Es un maestro del skateboarding, la resortera y el grafitti.</p></li>
 				    <li><p class="at-in">- <ins>Lisa Simpson</ins>: Es la segunda hija de la familia. Tiene 8 años, es muy madura para su edad, aunque también es egocéntrica y siempre quiere ser completamente perfecta; en muchas ocasiones ha sido criticada por ser la opinión que a nadie le interesa oír y por su idealismo desenfocado que la lleva a participar en movimientos y actividades de protesta donde lejos de solo protestar incluso intenta imponer su punto de vista obligatoriamente como sucedería cuando se hizo vegetariana. Lleva una relación estresante con su hermano Bart, aunque cuando se ponen de acuerdo son una dupla efectiva y de temer que han tenido logros enormes como detener criminales o ayudar a gente importante. Tiene un IQ de 158.</p></li>
 					<li><p class="at-in">- <ins>Maggie Simpson</ins>: Es la bebé de 1 año, y físicamente la versión preescolar de Lisa. Tiene el cerebro de un constante infractor de la ley e incluso en varias ocasiones ha usado armas de fuego y agredido gente; a pesar de ello mantiene la inocencia y ternura de una bebé. Siempre demuestra un comportamiento más inteligente y despierto de lo que un niño de su edad debería tener. Tiene la manía de llevar un chupete en la boca que rara vez se lo quita. Solo ha hablado ocho veces y solo tres se confirmaron.</p></li>
+					<br/><br/><br/><center><img src="images/simpsons_familia.jpg" alt="familiasimpson" style="float:center;width:490px;height:295px;"></center><br/>
 				</ul>
 			   <h3 style="color:white;padding:18px;"><ins>Personajes Secundarios</ins></h3>
 			   <ul class="social" style="list-style-type:disc">
@@ -124,8 +125,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><p class="at-in">- <ins>Jimbo "Jones"</ins>: Abusón y estudiante de la Escuela Primaria de Springfield. Siempre lleva puesta una gorra de lana morada, la cual oculta su calvicie.</p></li>
 					<li><p class="at-in">- <ins>Dolph Starbeam</ins>: Abusón y estudiante de la Escuela Primaria de Springfield. Aparentemente novio de la madre de Jimbo.</p></li>
 					<li><p class="at-in">- <ins>Kernie Zzyzwicz Jr.</ins>: Abusón de 26 años. Tiene un hijo igual a él. Es el estudiante más viejo de la Escuela Primaria Springfield.</p></li>
-					<li><p class="at-in">- <ins>Terry</ins>: Hermana gemela de Sherry, es actualmente novia de Bart.</p></li>
-					<li><p class="at-in">- <ins>Sherry</ins>: Hermana gemela de Terry. Ambas son estudiantes de la Escuela Primaria de Springfield.</li>
+					<li><p class="at-in">- <ins>Terry</ins>: Hermana gemela de Sherry, es actualmente novia de Bart.</p></li><br/>
+					<li><p class="at-in">- <ins>Sherry</ins>: Hermana gemela de Terry. Ambas son estudiantes de la Escuela Primaria de Springfield.</li><br/>
 					<li><p class="at-in">- <ins>Ütter Zorker</ins>: Niño de intercambio alemán. Fanático de la comida basura.</p></li>
 					<li><p class="at-in">- <ins>Ralph Wiggum</ins>: Compañero de clase y ex-novio de Lisa. Tiene pocas luces y siempre tiene algún comentario gracioso para una situación seria.</p></li>
 					<li><p class="at-in">- <ins>Clancy Wiggum</ins>: Padre de la Familia Wiggum. Es el jefe del departamento de policía de Springfield. De joven fue agente de seguridad de la secundaria Springfield, en donde Mona Simpson curó accidentalmente su asma. Ascendido a Comisionado y ex integrante de Be Sharps.</p></li>
@@ -138,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><p class="at-in">- <ins>William "Willie" MacGoran</ins>: Encargado de mantenimiento de la Escuela Primaria de Springfield, es escocés y va muy cabreado.</p></li>
 					<li><p class="at-in">- <ins>Otto Mann</ins>: Conductor del autobus escolar de la Escuela Primaria de Springfield, es metalero y siempre va con los cascos a todos lados.</p></li>
 				</ul>
-				<br/><br/><center><img src="images/personajess.jpg" alt="personajessimpsons2" style="width:750px;height:448px;"></center><br/>
+				<br/><br/><center><img src="images/personajess.jpg" alt="personajessimpsons2" style="width:768px;height:460px;"></center><br/>
 			</div>
  		</div>
    </div>
