cambios en las imagenes para que sean adaptables al formato movil

--- a/p2/single.html
+++ b/p2/single.html
@@ -92,7 +92,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		            <li><p class="at-in">- <ins>Bart Simpson</ins>: Es el hijo mayor, tenía 9 años hasta el episodio Radio Bart, 10 hasta la segunda mitad de la temporada 24, y actualmente tiene 11 años de edad. Es travieso y a veces hiperactivo; muchas veces se mete en líos principalmente por tener ideas vandálicas o que se salen de control. Es un maestro del skateboarding, la resortera y el grafitti.</p></li>
 				    <li><p class="at-in">- <ins>Lisa Simpson</ins>: Es la segunda hija de la familia. Tiene 8 años, es muy madura para su edad, aunque también es egocéntrica y siempre quiere ser completamente perfecta; en muchas ocasiones ha sido criticada por ser la opinión que a nadie le interesa oír y por su idealismo desenfocado que la lleva a participar en movimientos y actividades de protesta donde lejos de solo protestar incluso intenta imponer su punto de vista obligatoriamente como sucedería cuando se hizo vegetariana. Lleva una relación estresante con su hermano Bart, aunque cuando se ponen de acuerdo son una dupla efectiva y de temer que han tenido logros enormes como detener criminales o ayudar a gente importante. Tiene un IQ de 158.</p></li>
 					<li><p class="at-in">- <ins>Maggie Simpson</ins>: Es la bebé de 1 año, y físicamente la versión preescolar de Lisa. Tiene el cerebro de un constante infractor de la ley e incluso en varias ocasiones ha usado armas de fuego y agredido gente; a pesar de ello mantiene la inocencia y ternura de una bebé. Siempre demuestra un comportamiento más inteligente y despierto de lo que un niño de su edad debería tener. Tiene la manía de llevar un chupete en la boca que rara vez se lo quita. Solo ha hablado ocho veces y solo tres se confirmaron.</p></li>
-					<br/><br/><br/><center><img src="images/simpsons_familia.jpg" alt="familiasimpson" style="float:center;width:490px;height:295px;"></center><br/>
+					<br/><br/><br/><center><img src="images/simpsons_familia.jpg" alt="familiasimpson" style="float:center;width:53%;height:43%;"></center><br/>
 				</ul>
 			   <h3 style="color:white;padding:18px;"><ins>Personajes Secundarios</ins></h3>
 			   <ul class="social" style="list-style-type:disc">
@@ -139,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><p class="at-in">- <ins>William "Willie" MacGoran</ins>: Encargado de mantenimiento de la Escuela Primaria de Springfield, es escocés y va muy cabreado.</p></li>
 					<li><p class="at-in">- <ins>Otto Mann</ins>: Conductor del autobus escolar de la Escuela Primaria de Springfield, es metalero y siempre va con los cascos a todos lados.</p></li>
 				</ul>
-				<br/><br/><center><img src="images/personajess.jpg" alt="personajessimpsons2" style="width:768px;height:460px;"></center><br/>
+				<br/><br/><center><img src="images/personajess.jpg" alt="personajessimpsons2" style="width:75%;height:70%;"></center><br/>
 			</div>
  		</div>
    </div>
