--- a/p2/about.html
+++ b/p2/about.html
@@ -4,13 +4,13 @@
 <title>Los simpsonspedium</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Modern Music Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css' />
+<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css' />
 <link rel="stylesheet" href="css/slider.css" type="text/css" media="screen" />
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.nivo.slider.js"></script>
@@ -42,7 +42,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   </div>
 		   <div class="header-bottom">
 		      <div class="top-nav">
-			  <span class="menu"><img src="images/menu.png" alt=""> </span>
+			  <span class="menu"><img src="images/menu.png" alt="" /> </span>
 
 					    <ul>
 							<li><a href="index.html">Home</a></li>
@@ -86,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="our-grid">
 							<div class="col-md-6 sit-in">
 								<a href="#" >
-									<img src="images/familia.jpg" alt="image" class="img-responsive ">
+									<img src="images/familia.jpg" alt="" class="img-responsive" />
 								</a>	
 							</div>				
 								<div class="col-md-6 our-head">
@@ -137,22 +137,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h4> Guiños</h4>
 				<div class="team-left">					
 					<div class="col-md-3 team-top">
-					<a href="#"><img class="img-responsive  mix-in" src="images/drogao.jpg" alt=""></a>
+					<a href="#"><img class="img-responsive  mix-in" src="images/drogao.jpg" alt="" /></a>
 						<h6><a href="#">Homer y la adicción a la maria</a></h6>
 						<p>y pensar que la mariguana terapeutica tiene efectos positivos.</p>
 					</div>
 					<div class="col-md-3 team-top ">
-						<a href="#"><img class="img-responsive  mix-in" src="images/presidente.jpg" alt=""></a>
+						<a href="#"><img class="img-responsive  mix-in" src="images/presidente.jpg" alt="" /></a>
 						<h6><a href="#">Un presidente digno</a></h6>
 						<p>Seguro que votarás a este antes que a Donal Trump.</p>
 					</div>
 					<div class="col-md-3 team-top">
-						<a href="#"><img class="img-responsive  mix-in" src="images/clasico.jpg" alt=""></a>
+						<a href="#"><img class="img-responsive  mix-in" src="images/clasico.jpg" alt="" /></a>
 						<h6><a href="#">Clasicos en mente</a></h6>
 						<p>Los clasicos de Disney.</p>
 					</div>
 					<div class="col-md-3 team-top top-team">
-						<a href="#"><img class="img-responsive  mix-in" src="images/perrohendrix.jpg" alt=""></a>
+						<a href="#"><img class="img-responsive  mix-in" src="images/perrohendrix.jpg" alt="" /></a>
 						<h6><a href="#">El guiño a Jimi Hendrix</a></h6>
 						<p>prueba a darle una guitarra haber si toca algo.</p>
 					</div>
@@ -179,11 +179,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-4 amet-in">
 				<h4>Photo Stream</h4>
 					<ul>
-						<li><a href="#"><img src="images/Lambda.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="#"><img src="images/Abraham.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="https://www.youtube.com/channel/UCwo3ZUJl0M11wtffkegcK9w"><img src="images/AlvarofcoJuan.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="https://www.youtube.com/user/cmsrxeholo"><img src="images/Mendez.jpg" alt="" class="img-responsive"></a></li>
-						<li><a href="#"><img src="images/476D52AD-D736-4FBE-B77B-75C0152FCD5F-3260-0000032777354021_zps9d59cdf9.jpg" alt="" class="img-responsive"></a></li>
+						<li><a href="#"><img src="images/Lambda.jpg" alt="" class="img-responsive" /></a></li>
+						<li><a href="#"><img src="images/Abraham.jpg" alt="" class="img-responsive" /></a></li>
+						<li><a href="https://www.youtube.com/channel/UCwo3ZUJl0M11wtffkegcK9w"><img src="images/AlvarofcoJuan.jpg" alt="" class="img-responsive" /></a></li>
+						<li><a href="https://www.youtube.com/user/cmsrxeholo"><img src="images/Mendez.jpg" alt="" class="img-responsive" /></a></li>
+						<li><a href="#"><img src="images/476D52AD-D736-4FBE-B77B-75C0152FCD5F-3260-0000032777354021_zps9d59cdf9.jpg" alt="" class="img-responsive" /></a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 amet-sed ">
